# jujostream

./: .gitignore  .gitmodules  README.md  android_wifi_research.md  build_releases.sh  dimensity-black-screen.txt  fix.py  fix_settings.py  patch_pairing.py  privacy.md  pubspec.yaml  refactor_settings.py  sendinput_patch.py  setup_macos_native_deps.sh  setup_native_deps.sh  setup_windows_native_deps.ps1  welcome.html  wgi_fix.py  wgi_patch.py  xi_patch.py
.github/workflows/: build-android.yml  build-macos.yml  objective-c-xcode.yml
android/: .gitignore  build.gradle.kts  gradle.properties  key.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/bridge/: LockFreeRingBuffer.h  OboeAudioRenderer.cpp  OboeAudioRenderer.h  callbacks.c  moonlight_bridge.c
assets/ss/: readme.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_localizations.dart
lib/models/: computer_details.dart  game_collection.dart  gaming_news_item.dart  models.dart  nv_app.dart  plugin_config.dart  stream_configuration.dart  theme_config.dart
lib/platform_channels/: gamepad_channel.dart  platform_channels.dart  streaming_channel.dart
lib/providers/: app_list_provider.dart  auth_provider.dart  computer_provider.dart  locale_provider.dart  plugins_provider.dart  providers.dart  settings_provider.dart  theme_provider.dart
lib/screens/about/: about_screen.dart
lib/screens/app_view/: app_details_screen.dart  app_view_cards.dart  app_view_carousel.dart  app_view_discovery.dart  app_view_filters.dart  app_view_gamepad_handler.dart  app_view_grid.dart  app_view_presentation_settings_screen.dart  app_view_screen.dart  app_view_video_preview.dart
lib/screens/collections/: collections_screen.dart
lib/screens/companion/: companion_qr_screen.dart
lib/screens/game/: direct_touch_handler.dart  dynamic_bitrate_controller.dart  game_stream_screen.dart  perf_stats_overlay.dart  quick_fav_keys_panel.dart  quick_keys_overlay.dart  special_keys.dart  stream_overlay_widgets.dart  trackpad_input_handler.dart
lib/screens/pc_view/: focus_mode_screen.dart  pc_view_screen.dart  vibeapollo_screen.dart
lib/screens/plugins/: plugins_screen.dart  steam_login_screen.dart
lib/screens/settings/: achievements_screen.dart  controller_layout_editor.dart  device_flow_screen.dart  profile_screen.dart  settings_screen.dart  vpn_guide_sheet.dart
lib/services/audio/: ui_sound_service.dart
lib/services/auth/: google_auth_service.dart
lib/services/companion/: companion_server.dart
lib/services/crash/: crash_service.dart
lib/services/crypto/: client_identity.dart  identity_generator.dart
lib/services/database/: achievement_service.dart  app_override_service.dart  collections_service.dart  metadata_database.dart  session_history_service.dart
lib/services/discovery/: discovery_service.dart  mdns_hostname_resolver.dart
lib/services/errors/: error_codes.dart
lib/services/http_api/: nv_http_client.dart  vibepollo_cfg_client.dart
lib/services/input/: gamepad_button_helper.dart  gamepad_navigation_service.dart
lib/services/metadata/: background_blur_service.dart  macro_genre_classifier.dart  rawg_client.dart  steam_achievement_service.dart  steam_connect_service.dart  steam_library_service.dart  steam_video_client.dart  youtube_trailer_service.dart
lib/services/network/: smart_bitrate_service.dart  wake_on_lan_service.dart
lib/services/news/: gaming_news_service.dart
lib/services/notifications/: notification_service.dart
lib/services/pairing/: pairing_service.dart
lib/services/preferences/: game_preferences_store.dart  launcher_preferences.dart
lib/services/pro/: billing_service.dart  (+1 more)
lib/themes/: launcher_theme.dart  launcher_theme_registry.dart
lib/utils/: app_version.dart
lib/widgets/: coming_soon_dialog.dart  computer_options_dialog.dart  now_playing_banner.dart  pairing_dialog.dart  poster_image.dart  pro_gate.dart  screensaver_overlay.dart  server_info_card.dart  session_metrics_dialog.dart  tour_overlay.dart  trailer_modal.dart
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  AudioRendererMac.swift  DebugProfile.entitlements  MainFlutterWindow.swift  Release.entitlements  Runner-Bridging-Header.h  StreamingBridge.swift  StreamingPlugin.swift  VideoDecoder.swift
macos/Runner.xcodeproj/: project.pbxproj
test/pairing/: pairing_crypto_test.dart  pairing_endpoint_test.dart  pairing_state_test.dart
test/telemetry/: beta_telemetry_service_test.dart
test/themes/: launcher_theme_registry_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/native_streaming/: CMakeLists.txt
windows/native_streaming/audio/: audio_format_helper.cpp  audio_format_helper.h  audio_renderer_win.h  audio_ring_buffer.cpp  audio_ring_buffer.h  wasapi_renderer.cpp  wasapi_renderer.h
windows/native_streaming/bridge/: callbacks_win.c  moonlight_bridge_win.c  moonlight_bridge_win.h
windows/native_streaming/input/: combo_detector.cpp  combo_detector.h  gamepad_method_handler.cpp  gamepad_method_handler.h  gamepad_plugin_win.cpp  gamepad_plugin_win.h  wgi_handler.cpp  wgi_handler.h  xinput_handler.cpp  xinput_handler.h
windows/native_streaming/moonlight-common-c/enet/: host.c  protocol.c  unix.c  win32.c
windows/native_streaming/moonlight-common-c/enet/include/enet/: enet.h
windows/native_streaming/plugin/: event_emitter.cpp  event_emitter.h  method_handler.cpp  method_handler.h  streaming_bridge_win.cpp  streaming_bridge_win.h  streaming_plugin_win.cpp  streaming_plugin_win.h
windows/native_streaming/video/: codec_probe_win.cpp  codec_probe_win.h  d3d11_device.cpp  d3d11_device.h  mft_decoder.cpp  mft_decoder.h  nalu_parser.cpp  nalu_parser.h  texture_bridge.cpp  texture_bridge.h  video_decoder_win.h
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  utils.cpp  utils.h  window_plugin_win.cpp  window_plugin_win.h
(+54 files in other folders)
